fix: read sender and empfaenger values from db instead of hardcoding
