# src/app/core/api/models/richtung-values.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface RichtungValues {
+  empfaenger: Array<string>;
+  sender: Array<string>;
+}
